(rule
 (alias   build-box2d)
 (deps    (source_tree vendor/box2d))
 (targets libbox2d.a dllbox2d.so)
 (action
  (bash "
    cd vendor/box2d

    rm -rf build-static
    cmake -B build-static -DCMAKE_BUILD_TYPE=Release -DCMAKE_POSITION_INDEPENDENT_CODE=ON
    cmake --build build-static --config Release
    cp build-static/src/libbox2d.a ../../libbox2d.a

    rm -rf build-shared
    cmake -B build-shared -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON
    cmake --build build-shared --config Release
    cp build-shared/bin/libbox2d.so ../../dllbox2d.so
  ")))

(library
 (name box2d_c)
 (package box2d)
 (libraries ctypes.foreign)
 (ctypes 
  (external_library_name box2d)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I../vendor/box2d/include" "-I.")
    (c_library_flags :standard)))
  (headers
    (include "box2d/box2d.h" "shims.h"))
  (type_description
   (instance Types)
   (functor Types))
  (function_description
   (instance Functions)
   (functor Functions))
  (generated_types Box2d_types_generated)
  (generated_entry_point Box2d_generated))
 (foreign_archives box2d)
 (foreign_stubs
  (language c)
  (names shims)))

(data_only_dirs vendor)
